--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
 			</div>
 		</header>
 			<div class="container">
-				<form>
-					<input type="text" id="city-type" placeholder="Enter a city name...">
-					<input type="submit" value="Update" id="submit-btn">
-				</form>
+				<!-- <form> -->
+					<!-- <input type="text" id="city-type" placeholder="Enter a city name..."> -->
+					<!-- <input type="submit" value="Update" id="submit-btn"> -->
+				<!-- </form> -->
+
+				<select class="drop-down">
+					<option selected disabled>Select a city</option>
+
+				</select>
 		
 			</div>
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
